# psa

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  tailwind.config.js
.devcontainer/: config-devcontainer.sh  devcontainer.json
apps/standalone/cadence/: Cargo.toml
apps/standalone/cadence/src/: main.rs
apps/standalone/codex/: Cargo.toml
apps/standalone/codex/src/: main.rs
apps/standalone/ledger/: Cargo.toml
apps/standalone/ledger/src/: main.rs
apps/standalone/milestones/: Cargo.toml
apps/standalone/milestones/src/: main.rs
apps/standalone/rapport/: Cargo.toml
apps/standalone/rapport/src/: main.rs
apps/standalone/registry/: Cargo.toml
apps/standalone/registry/src/: main.rs
apps/standalone/resolver/: Cargo.toml  Dioxus.toml
apps/standalone/resolver/src/: main.rs  routes.rs
apps/standalone/tempo/: Cargo.toml
apps/standalone/tempo/src/: main.rs
apps/suites/msp-suite/: Cargo.toml  Dioxus.toml
apps/suites/msp-suite/src/: main.rs  routes.rs
crates/psa-assets/: Cargo.toml
crates/psa-assets/src/: lib.rs  models.rs
crates/psa-billing/: Cargo.toml
crates/psa-billing/src/: lib.rs  models.rs
crates/psa-calendar/: Cargo.toml
crates/psa-calendar/src/: lib.rs  models.rs
crates/psa-core/: Cargo.toml
crates/psa-core/src/: audit.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  middleware.rs  models.rs  notifications.rs  tenants.rs
crates/psa-crm/: Cargo.toml
crates/psa-crm/src/: lib.rs  models.rs
crates/psa-knowledge-base/: Cargo.toml
crates/psa-knowledge-base/src/: lib.rs  models.rs
crates/psa-projects/: Cargo.toml
crates/psa-projects/src/: lib.rs  models.rs
crates/psa-ticketing/: Cargo.toml
crates/psa-ticketing/src/: handlers.rs  lib.rs  models.rs  repository.rs  routes.rs  views.rs
crates/psa-ticketing/src/views/: ticket_detail.rs  ticket_form.rs  ticket_list.rs
crates/psa-time-tracking/: Cargo.toml
crates/psa-time-tracking/src/: lib.rs  models.rs
crates/psa-ui/: Cargo.toml
crates/psa-ui/src/: components.rs  layout.rs  lib.rs  theme.rs
crates/psa-ui/src/components/: buttons.rs  feedback.rs  forms.rs  tables.rs
crates/psa-ui/src/layout/: header.rs  shell.rs  sidebar.rs
docs/: PRD.md
migrations/: 001_initial_schema.sql  002_seed_data.sql
migrations/core/: 001_initial.sql
migrations/ticketing/: 001_initial.sql
scripts/: run-dev.sh
src/: lib.rs  main.rs  server_fns.rs
src/api/: mod.rs  router.rs
src/components/: button.rs  card.rs  form.rs  icons.rs  layout.rs  mod.rs  modal.rs  table.rs
src/db/: mod.rs  pool.rs  tenant.rs
src/hooks/: auth.rs  fetch.rs  mod.rs
src/modules/: mod.rs
src/modules/assets/: mod.rs
src/modules/audit/: mod.rs
src/modules/auth/: middleware.rs  mod.rs  models.rs  routes.rs  service.rs
src/modules/billing/: mod.rs
src/modules/calendar/: mod.rs
src/modules/contacts/: mod.rs  models.rs  routes.rs  service.rs
src/modules/contracts/: mod.rs
src/modules/knowledge_base/: mod.rs
src/modules/notifications/: mod.rs
src/modules/portal/: mod.rs
src/modules/projects/: mod.rs
src/modules/reports/: mod.rs
src/modules/rmm/: mod.rs
src/modules/settings/: mod.rs
src/modules/sla/: mod.rs
src/modules/tenants/: mod.rs  models.rs  routes.rs  service.rs
src/modules/tickets/: automation.rs  mod.rs  models.rs  routes.rs  service.rs
src/modules/time_tracking/: mod.rs
src/pages/: admin.rs  assets.rs  auth.rs  billing.rs  calendar.rs  contacts.rs  contracts.rs  dashboard.rs  home.rs  knowledge_base.rs  mod.rs  not_found.rs  portal.rs  projects.rs  reports.rs  settings.rs  tickets.rs  time.rs
src/utils/: crypto.rs  error.rs  mod.rs  pagination.rs  validation.rs
