[workspace]
resolver = "2"

members = [
    # Core crates (shared by all)
    "crates/psa-core",
    "crates/psa-ui",

    # Module crates (libraries)
    "crates/psa-ticketing",
    "crates/psa-time-tracking",
    "crates/psa-projects",
    "crates/psa-crm",
    "crates/psa-billing",
    "crates/psa-assets",
    "crates/psa-knowledge-base",
    "crates/psa-calendar",

    # Standalone apps (Personal tier)
    "apps/standalone/resolver",      # Ticketing
    "apps/standalone/tempo",         # Time Tracking
    "apps/standalone/milestones",    # Project Management
    "apps/standalone/rapport",       # CRM
    "apps/standalone/ledger",        # Billing
    "apps/standalone/registry",      # Asset Management
    "apps/standalone/codex",         # Knowledge Base
    "apps/standalone/cadence",       # Scheduling

    # Suite apps (SMB tier)
    "apps/suites/msp-suite",         # MSP Suite
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PSA Platform Team"]
license = "Proprietary"
repository = "https://github.com/your-org/psa-platform"

[workspace.dependencies]
# Dioxus - fullstack framework
dioxus = { version = "0.7.2", features = ["router"] }

# Axum - HTTP server (server-side only)
axum = { version = "0.8.3", features = ["macros", "multipart", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "request-id"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# JWT tokens
jsonwebtoken = "9"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# HTTP client (for integrations)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"

# Rate limiting
governor = "0.8"

# Caching
moka = { version = "0.12", features = ["future"] }

# Decimal for financial calculations
rust_decimal = { version = "1", features = ["db-postgres", "serde"] }

# WASM specific (client-side)
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Storage", "Navigator"] }
js-sys = "0.3"

# Markdown rendering
pulldown-cmark = "0.12"

# Template rendering
minijinja = "2"

# Regex
regex = "1"

# Cron expressions
cron = "0.15"

# URL parsing
url = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Workspace crates
psa-core = { path = "crates/psa-core" }
psa-ui = { path = "crates/psa-ui" }
psa-ticketing = { path = "crates/psa-ticketing" }
psa-time-tracking = { path = "crates/psa-time-tracking" }
psa-projects = { path = "crates/psa-projects" }
psa-crm = { path = "crates/psa-crm" }
psa-billing = { path = "crates/psa-billing" }
psa-assets = { path = "crates/psa-assets" }
psa-knowledge-base = { path = "crates/psa-knowledge-base" }
psa-calendar = { path = "crates/psa-calendar" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
