[package]
name = "cadence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cadence - Standalone scheduling and calendar application"

[[bin]]
name = "cadence"
path = "src/main.rs"

[features]
default = ["fullstack"]
server = ["dioxus/server", "psa-core/server", "psa-calendar/server"]
web = ["psa-core/web", "psa-calendar/web"]
fullstack = ["server", "web"]

[dependencies]
psa-core = { workspace = true }
psa-ui = { workspace = true }
psa-calendar = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
