[package]
name = "ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ledger - Standalone billing and invoicing application"

[[bin]]
name = "ledger"
path = "src/main.rs"

[features]
default = ["fullstack"]
server = ["dioxus/server", "psa-core/server", "psa-billing/server"]
web = ["psa-core/web", "psa-billing/web"]
fullstack = ["server", "web"]

[dependencies]
psa-core = { workspace = true }
psa-ui = { workspace = true }
psa-billing = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
