[package]
name = "registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Registry - Standalone asset management application"

[[bin]]
name = "registry"
path = "src/main.rs"

[features]
default = ["fullstack"]
server = ["dioxus/server", "psa-core/server", "psa-assets/server"]
web = ["psa-core/web", "psa-assets/web"]
fullstack = ["server", "web"]

[dependencies]
psa-core = { workspace = true }
psa-ui = { workspace = true }
psa-assets = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
