[package]
name = "resolver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Resolver - Standalone ticketing and help desk application"

[[bin]]
name = "resolver"
path = "src/main.rs"

[features]
default = ["fullstack"]
server = ["dioxus/server", "psa-core/server", "psa-ticketing/server"]
web = ["psa-core/web", "psa-ticketing/web"]
fullstack = ["server", "web"]

# Deployment modes
standalone = ["psa-core/standalone"]
saas = ["psa-core/saas"]
single-tenant = ["psa-core/single-tenant"]

[dependencies]
# Core and module crates
psa-core = { workspace = true }
psa-ui = { workspace = true }
psa-ticketing = { workspace = true }

# Dioxus framework
dioxus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Server dependencies
axum = { workspace = true }
tokio = { workspace = true }
