[package]
name = "tempo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tempo - Standalone time tracking application"

[[bin]]
name = "tempo"
path = "src/main.rs"

[features]
default = ["fullstack"]
server = ["dioxus/server", "psa-core/server", "psa-time-tracking/server"]
web = ["psa-core/web", "psa-time-tracking/web"]
fullstack = ["server", "web"]

[dependencies]
psa-core = { workspace = true }
psa-ui = { workspace = true }
psa-time-tracking = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
